--- a/.github/workflows/sys-on-cron-cleanup.yml
+++ b/.github/workflows/sys-on-cron-cleanup.yml
@@ -5,6 +5,7 @@ name: Clean Workflows
 # Controls when the workflow will run
 on:
   schedule:
+    # Onwership refresh of workflow
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 * * * *'
   workflow_dispatch:
